Bug 344822 - kpeople master fails to compile against qt 5.5
Summary: kpeople master fails to compile against qt 5.5
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kpeople
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-04 12:30 UTC by bluescreenavenger
Modified: 2016-03-11 23:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2015-03-04 12:30:35 UTC
This patch allows it to compile against qt 5.5, qt5.5 must not include QObject by default in any of the headers...


diff --git a/src/widgets/actions.h b/src/widgets/actions.h
index 0ccfbda..382a1ed 100644
--- a/src/widgets/actions.h
+++ b/src/widgets/actions.h
@@ -19,6 +19,7 @@
 #ifndef KPEOPLEWIDGETS_GLOBAL_H
 #define KPEOPLEWIDGETS_GLOBAL_H
 
+#include <QObject>
 #include <QString>
 #include <QStringList>
 


Reproducible: Always
Comment 1 Aleix Pol 2015-03-04 15:29:28 UTC
Git commit 3c96a647664fc0e52ded3ad6e33865713d2461dc by Aleix Pol.
Committed on 04/03/2015 at 15:26.
Pushed by apol into branch 'master'.

Fix build with Qt 5.5

Make the header autocontained with regards to the symbols used.

M  +3    -3    src/widgets/actions.h

http://commits.kde.org/kpeople/3c96a647664fc0e52ded3ad6e33865713d2461dc