Fix build with Qt 5.5

Make the header autocontained with regards to the symbols used.

BUG: 344822